--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,10 @@
 			<artifactId>camel-groovy</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson</artifactId>
+		</dependency>
 
 	</dependencies>
 
