--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
 			<artifactId>camel-jackson</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson-starter</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
